adjusted images to make sure they are not stretched across different screen sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,6 +72,7 @@ p {
     height: 600px;
     width: 80%;
     margin: auto;
+    object-fit: scale-down;
 }
 
 #hero-image img {
@@ -133,6 +134,8 @@ p {
     height: 300px;
     border-color: rgb(36, 39, 43);
     border-style: double;
+    background-color: #3B413C;
+    object-fit: scale-down;
 }
 
 .description {
@@ -153,6 +156,10 @@ p {
     width: 90%;
 }
 
+.set-up img{
+    background-color: #3B413C;
+    object-fit: scale-down;
+}
 .style {
     margin-left: 5%;
     margin-top: 25px;
@@ -163,6 +170,7 @@ p {
     border-color: rgb(36, 39, 43);
     background-color: #FCFFFC;
 }
+
 
 
 /*---------------------------Form*/
